force-app/main/default/objects/PicklistInfoItem__c/PicklistInfoItem__c.object-meta.xml
<CustomObject>
    <label>Picklist Info Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Picklist Info Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>