force-app/main/default/objects/PicklistInfoItem__c/fields/ClosedLostLabel__c.field-meta.xml
<CustomField>
    <fullName>ClosedLostLabel__c</fullName>
    <label>Closed Lost Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>