force-app/main/default/objects/PicklistInfoItem__c/fields/ClosedWonLabel__c.field-meta.xml
<CustomField>
    <fullName>ClosedWonLabel__c</fullName>
    <label>Closed Won Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>