force-app/main/default/objects/PicklistInfoItem__c/fields/PicklistInfoId__c.field-meta.xml
<CustomField>
    <fullName>PicklistInfoId__c</fullName>
    <label>Picklist Info</label>
    <referenceTo>PicklistInfo__c</referenceTo>
    <relationshipLabel>Picklist Info Items</relationshipLabel>
    <relationshipName>PicklistInfoItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>