force-app/main/default/objects/PicklistInfoItem__c/fields/PicklistValue__c.field-meta.xml
<CustomField>
    <fullName>PicklistValue__c</fullName>
    <label>Picklist Value</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>